--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "license": "ISC",
     "dependencies": {
       "express": "^4.18.2",
+      "dotenv": "^16.0.3",
+      "mongoose": "^6.7.0",
       "nodemon": "^2.0.20"
     }
   }
