--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,13 @@
     "author": "Mudassar Ali",
     "license": "ISC",
     "dependencies": {
+      "bcryptjs": "^2.4.3",
       "express": "^4.18.2",
       "dotenv": "^16.0.3",
+      "jsonwebtoken": "^8.5.1",
+      "mongoose-unique-validator": "^3.1.0",
       "mongoose": "^6.7.0",
-      "nodemon": "^2.0.20"
+      "nodemon": "^2.0.20",
+      "validator": "^13.7.0"
     }
   }
