--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,21 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node server.js",
-      "nodemon": "nodemon server.js"
+        "start": "node server.js",
+        "nodemon": "nodemon server.js"
     },
     "author": "Mudassar Ali",
     "license": "ISC",
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "express": "^4.18.2",
-      "express-async-errors": "^3.1.1",
-      "dotenv": "^16.0.3",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose-unique-validator": "^3.1.0",
-      "mongoose": "^6.7.0",
-      "nodemon": "^2.0.20",
-      "validator": "^13.7.0"
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.7.0",
+        "mongoose-unique-validator": "^3.1.0",
+        "nodemon": "^2.0.20",
+        "validator": "^13.7.0"
     }
-  }
+}
